cmake_minimum_required(VERSION 3.10)
project(ds_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        ds_2 main.cpp
#        d_1/sqList/SqList.h
#        d_1/sqList/SqLinkedList.h
#        d_1/sqList/CircularLinkedList.h
#        d_1/run.h d_1/stack/SqStack.h
#        d_1/stack/LinkStack.h
#        d_1/queue/SqQueue.h
#        d_1/queue/LinkQueue.h
#        d_1/string/String.h
#        d_1/tree/BTree.h
#        d_1/graph/Graph.h
#        d_1/search/Search.h
#        d_1/sort/Sort.h
#        d_2/run.h
#        d_2/sort/Sort_2.h
#        d_3/run_3.h
#        d_3/ds/seq_list/SeqList_3.h
#        d_3/ds/seq_list/LinkList_3.h
#        d_3/ds/stack/Stack_3.h
#        d_3/ds/queue/Queue.h
#        d_3/ds/tree/Tree_3.h
#        d_3/ds/graph/Graph_3.h
#        d_3/sort/Sort_3.h
#        d_4/run.h
#        d_4/sort/sort_4.h
#        d_5/r1/run.h d_5/r1/run_2.h
#        d_5/r1/sort_5_2.h
        d_5/run_3.h)